--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,16 @@
-werkzeug<=2.3
-Flask-SQLAlchemy
-flask
-flask-login
+annotated-types==0.6.0
+blinker==1.7.0
+click==8.1.7
+Flask==2.3.1
+Flask-Login==0.6.3
+Flask-SQLAlchemy==3.1.1
+greenlet==3.0.3
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+pydantic==2.6.2
+pydantic_core==2.16.3
+python-dotenv==1.0.1
+SQLAlchemy==2.0.27
+typing_extensions==4.9.0
+Werkzeug==2.3.0
